# vagetables_practice

./: CMakeLists.txt  bot.cpp  bot.h  control.h  dynamic_entity.cpp  dynamic_entity.h  entity.cpp  entity.h  list_of_type.h  main.cpp  player.cpp  player.h  static_entity.cpp  static_entity.h  visual_bot.h  visual_player.h  visual_static.h  visual_world.h  world.cpp  world.h
